style.css
/* ... */
.pure-button-blue:before {
    content: "";
}

.pure-button-blue:focus,
.pure-button-blue.focus {
    color: #fff;
    background-color: #5cc3f6;
    border-color: #08c;
}

.pure-button-blue:hover {
    color: #fff;
    background-color: #5cc3f6;
    border-color: #08c;
}

.pure-menu-item .pure-menu-link {
    transition: all 500ms cubic-bezier(.22, .81, .01, .99)!important;
    -webkit-transition: all 500ms cubic-bezier(.22, .81, .01, .99)!important;
}

.pure-menu-item.active {
    color: #5cc3f6!important;
}

.pure-menu-horizontal li a {
    padding-left: 4px;
    padding-right: 6px;
    margin: auto 12px;
}

.pure-menu-horizontal li.active a,
.pure-menu-horizontal li:hover a {
    /* a little extra padding for this style to allow for scrollbars */
    color: #5cc3f6!important;
}


/* menu responsive horizontal */

.custom-menu-wrapper {
    background-color: rgba(0, 0, 0, 0.7);
    white-space: nowrap;
    position: fixed;
    width: 100%;
    z-index: 3;
}

.custom-menu {
    display: inline-block;
    width: auto;
    vertical-align: middle;
    -webkit-font-smoothing: antialiased;
}

.custom-menu .pure-menu-link,
.custom-menu .pure-menu-heading {
    color: white;
}

.custom-menu .pure-menu-link:hover,
.custom-menu .pure-menu-heading:hover {
    background-color: transparent;
}

.custom-menu-top {
    position: relative;
    padding-top: .5em;
    padding-bottom: .5em;
}

.custom-menu-brand {
    display: block;
    text-align: center;
    position: relative;
}

.custom-menu-toggle {
    width: 44px;
    height: 44px;
    display: block;
    position: absolute;
    top: 3px;
    right: 0;
    display: none;
    cursor: pointer;
}

.custom-menu-toggle .bar {
    background-color: white;
    display: block;
    width: 20px;
    height: 2px;
    border-radius: 100px;
    position: absolute;
    top: 22px;
    right: 12px;
    -webkit-transition: all 0.5s;
    transition: all 0.5s;
}

.custom-menu-toggle .bar:first-child {
    -webkit-transform: translateY(-6px);
    transform: translateY(-6px);
}

.custom-menu-toggle.x .bar {
    -webkit-transform: rotate(45deg);
    transform: rotate(45deg);
}

.custom-menu-toggle.x .bar:first-child {
    -webkit-transform: rotate(-45deg);
    transform: rotate(-45deg);
}

.custom-menu-screen {
    background-color: rgba(0, 0, 0, 0.7);
    -webkit-transition: all 0.5s;
    transition: all 0.5s;
    height: 3em;
    width: 70em;
    position: absolute;
    top: 0;
    z-index: -1;
}

.custom-menu-tucked .custom-menu-screen {
    -webkit-transform: translateY(-88px);
    transform: translateY(-88px);
}

@media (max-width: 767px) {
    /*----- Jumbotron -----*/
    .j1 {
        background-position: center;
        background-size: cover;
        background-repeat: no-repeat;
        width: 100%;
        text-align: center;
        padding-top: 70px;
        color: #fff;
        box-shadow: inset 0px -88px 61px -33px rgba(0, 0, 0, 0.41);
    }
    .custom-menu {
        display: block;
    }
    .custom-menu-toggle {
        display: block;
        display: none\9;
    }
    .custom-menu-bottom {
        position: absolute;
        width: 100%;
        border-top: none;
        background-color: #808080\9;
        z-index: 100;
    }
    .custom-menu-bottom .pure-menu-link {
        opacity: 1;
        -webkit-transform: translateX(0);
        transform: translateX(0);
        -webkit-transition: all 0.5s;
        transition: all 0.5s;
    }
    .custom-menu-bottom.custom-menu-tucked .pure-menu-link {
        -webkit-transform: translateX(-140px);
        transform: translateX(-140px);
        opacity: 0;
        opacity: 1\9;
    }
    .pure-menu-horizontal.custom-menu-tucked {
        z-index: -1;
        top: 45px;
        position: absolute;
        overflow: hidden;
    }
}


/*modal */

.modal-open {
    overflow: hidden;
}

.modal {
    display: none;
    overflow: hidden;
    position: fixed;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    z-index: 1050;
    -webkit-overflow-scrolling: touch;
    outline: 0;
}

.modal.fade .modal-dialog {
    -webkit-transform: translate(0, 100%);
    transform: translate(0, 100%);
    -webkit-transition: -webkit-transform 0.2s ease-out;
    transition: -webkit-transform 0.2s ease-out;
}

.modal.in .modal-dialog {
    -webkit-transform: translate(0, 0);
    transform: translate(0, 0);
}

.modal-open .modal {
    overflow-x: hidden;
    overflow-y: auto;
}

.modal-dialog {
    position: relative;
    width: auto;
    margin: 10px;
}

.modal-content {
    position: relative;
    background-color: #ffffff;
    border: 1px solid #999999;
    border: 1px solid rgba(0, 0, 0, 0.2);
    border-radius: 6px;
    box-shadow: 0 3px 9px rgba(0, 0, 0, 0.5);
    background-clip: padding-box;
    outline: 0;
}

.modal-backdrop {
    position: fixed;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    z-index: 1040;
    background-color: #000000;
}

.modal-backdrop.fade {
    opacity: 0;
    filter: alpha(opacity=0);
}

.modal-backdrop.in {
    opacity: 0.6;
    filter: alpha(opacity=60);
}

.modal-header {
    padding: 15px;
    /*border-bottom: 1px solid #e5e5e5;*/
    text-align: center;
}

.modal-header .close {
    margin-top: -2px;
}

.modal-title {
    margin: 0;
    line-height: 1.42857143;
}

.modal-body {
    position: relative;
    padding: 35px;
}

.modal-footer {
    /*padding: 15px;
    text-align: right;*/
    /*border-top: 1px solid #e5e5e5;*/
}

.modal-footer button {
    width: 50%;
    display: inline;
    float: left;
    border-radius: 0;
    background-color: #111;
    color: #fff;
    border: 1px dotted #333;
    padding: 20px;
    -webkit-transition: all .2s ease-in-out;
    transition: all .2s ease-in-out;
}

.modal-footer button:hover {}

.modal-footer button:first-child {
    border-bottom-left-radius: 19px;
    color: #555;
}

.modal-footer button:last-child {
    border-bottom-right-radius: 19px;
    color: #08c;
}
/* ... */

